Connect initializations logic to the new extension model init hooks